Quorum/Library/Tests/Inheritance/Pass/DerivedCall.quorum
use Kid
class Main
    action Main
        Kid kid
        output kid:Value()
    end
end