Quorum/Library/Tests/Inheritance/Fail/UsePrivateActionSoloCall.quorum
class Main 
    action Main
        Test2 test2
        test2:Run()
    end
end